fix: remove remaining two .toList() calls for Java 11 compat
Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>